--- a/crm-metadata/Cargo.toml
+++ b/crm-metadata/Cargo.toml
@@ -4,3 +4,25 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { workspace = true }
+chrono = { workspace = true }
+derive_builder = "0.20"
+fake = { version = "2.9", features = ["derive", "chrono"] }
+futures = "0.3"
+itertools = "0.12"
+prost = { workspace = true }
+prost-types = { workspace = true }
+rand = "0.8"
+serde = { workspace = true }
+serde_yaml = { workspace = true }
+sqlx = { workspace = true }
+tokio = { workspace = true }
+tokio-stream = "0.1"
+tonic = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+
+[build-dependencies]
+anyhow = { workspace = true }
+proto-builder-trait = "0.6"
+tonic-build = { workspace = true }
