--- a/crm-send/Cargo.toml
+++ b/crm-send/Cargo.toml
@@ -4,3 +4,29 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { workspace = true }
+chrono = { workspace = true }
+derive_builder = { workspace = true }
+futures = { workspace = true }
+itertools = { workspace = true }
+prost = { workspace = true }
+prost-types = { workspace = true }
+rand = { workspace = true }
+serde = { workspace = true }
+serde_yaml = { workspace = true }
+sqlx = { workspace = true }
+tokio = { workspace = true }
+tokio-stream = { workspace = true }
+tonic = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+uuid = { version = "1.8.0", features = ["v4"] }
+
+[build-dependencies]
+anyhow = { workspace = true }
+proto-builder-trait = { workspace = true }
+tonic-build = { workspace = true }
+
+[dev-dependencies]
+fake = { version = "2.9.2", features = ["derive", "chrono"] }
+nanoid = "0.4.0"
