feature: add integration tests

--- a/crm/Cargo.toml
+++ b/crm/Cargo.toml
@@ -16,7 +16,9 @@ anyhow = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
 tokio = { workspace = true }
-tonic = { workspace = true}
+tonic = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
