--- a/user-stat/Cargo.toml
+++ b/user-stat/Cargo.toml
@@ -3,19 +3,23 @@ name = "user-stat"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = []
+test_utils = ["sqlx-db-tester"]
 
 [dependencies]
 anyhow = { workspace = true }
 chrono = { workspace = true }
-derive_builder = "0.20.0"
-futures = "0.3.30"
-itertools = "0.12.1"
+derive_builder = { workspace = true }
+futures = { workspace = true }
+itertools = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
-rand = "0.8.5"
+rand = { workspace = true }
 serde = { workspace = true }
 serde_yaml = { workspace = true }
 sqlx = { workspace = true }
+sqlx-db-tester = { version = "0.4.2", optional = true }
 tokio = { workspace = true }
 tonic = { workspace = true }
 tracing = { workspace = true }
@@ -23,9 +27,10 @@ tracing-subscriber = { workspace = true }
 
 [build-dependencies]
 anyhow = { workspace = true }
-proto-builder-trait = "0.6.1"
+proto-builder-trait = { workspace = true }
 tonic-build = { workspace = true }
 
 [dev-dependencies]
 fake = { version = "2.9.2", features = ["derive", "chrono"] }
 nanoid = "0.4.0"
+user-stat = { workspace = true, features = ["test_utils"] }
